[package]
name = "reprise"
version = "0.1.0"
edition = "2024"

[dependencies]
quinn = "0.11.8"
rustls = "0.23.27"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.98"
rcgen = "0.13.2"
log = "0.4.27"
multicast-socket = "0.3.3"
sha2 = "0.10.9"
strum = { version = "0.27.1", features = ["derive"] }

[dev-dependencies]
simple_logger = "5.0.0"
