[package]
name = "reprise"
version = "0.1.0"
edition = "2024"

[dependencies]
quinn = { version = "0.11.8", features = ["rustls-ring"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.98"
rcgen = "0.13.2"
log = "0.4.27"
multicast-socket = "0.3.3"
sha2 = "0.10.9"
if-addrs = "0.13.4"
rand = "0.9.1"

[dev-dependencies]
simple_logger = "5.0.0"

[patch.crates-io]
multicast-socket = {git = "https://github.com/skibon02/multicast-socket.git"}
